# QuDSimprojects

./: README.md  config321.opts
DUNE-POISSON1D/: CMakeLists.txt  config.h.cmake  dune-p1.pc.in  dune.module
DUNE-POISSON1D/buildcmake/: CMakeCache  config.h  dune-p1-config.cmake  makefile
DUNE-POISSON1D/dune/: p1
DUNE-POISSON1D/src/: dune-p1.cc  qudsim_timer.hh  shapefunctions.hh
GUI/: README.md  load_file.py  main.py  new_file.py  save_file.py
GUI_2.0/: README.md
dune-flashmemory/: CMakeLists.txt  config.h  dune-highk.pc.in  dune.module
dune-flashmemory/build-cmake/: config.h.cmake  dune-highk.pc.in  dune-nanowire.pc.in  dune.module
dune-flashmemory/cmake/modules/: CMakeListz.txt
dune-flashmemory/dune/: CMakeLists.txt
dune-flashmemory/dune/highk/: CMakeLists.txt  highk.hh
dune-flashmemory/scripts/: scaling.sh
dune-flashmemory/src/: CMakeLists.txt  dune-highk.cc  dune_highk_parallel.cc  fermi.h  material_parameters_flash.txt  poissonfem_highk_parallel.hh  postprocessing.hh  schrodingerfem_highk_parallel.hh  shapefunctions.hh  wavefunction.hh
dune-graphene/: CMakelists.txt  circular.msh  dune-graphene1.cc  dune.module  gqd_hr.geo  gqd_hr2.geo  gqd_hr2.msh  gqd_refined.msh  makefile  pk2dlocalbasis.hh  plot_scaling.py  postprocessing.hh  quadraturerules.hh  qudsim_timer.hh  rectangle.msh  rectangular.msh  shapefunctions.hh  test.msh  theta9.1_fine.geo  theta9.1_fine.msh  wavefunction.hh
dune-nanowire/: CMakeLIists.txt  dune.module
dune-poisson3d/: CMakeLists.txt  config.h.cmake  dune-p3d.pc.in  dune.module
dune-poisson3d/buildcmake/: CMakeCache.txt  Makefile  config.h  dune-p3d-config-cmake
dune-poisson3d/buildcmake/cmake/: CTestTestfile.cmake  Makefile  cmake_install.cmake
dune-poisson3d/buildcmake/cmake/pkg/: dune-p3d-config.cmake
dune-poisson3d/buildcmake/doc/: CTestTestfile.cmake  cmake_install.cmake  makefile
dune-poisson3d/buildcmake/doc/doxygen/: CTestTestfile.cmake  Makefile  cmake_install.cmake
dune-poisson3d/buildcmake/dune/: CMakeDirectoryInformation (2).cmake  CTestTestfile.cmake  cmake_install.cmake  progress (3).marks
dune-poisson3d/buildcmake/src/: CTestTestfile.cmake  DependInfo.cmake  build.make  cmake_clean.cmake  cmake_install.cmake  depend.make  dune-p3d.cc.o.d  flags.make  link.txt  progress.make  progress.marks
dune-poisson3d/cmake/modules/: CMakeLists.txt
dune-poisson3d/dune/: p3d
dune-poisson3d/scripts/: plot_scaling.py
dune-poisson3d/src/: dune-p3d.cc  poisson3d.msh  qudsimtimer.hh  shapefunctions.hh
dune-selfconsistentsolver/: CMakeLists.txt  config.h.cmake  dune-sc1.pc.in  dune.module
(+149 files in other folders)
